--- a/node.html
+++ b/node.html
@@ -1,6 +1,6 @@
 <script type="text/x-red" data-template-name="google-translate">
     <div class="form-row">
-        <label for="node-input-from"><i class="fa fa-book"></i> Language</label>
+        <label for="node-input-from"><i class="fa fa-book"></i>From Language</label>
         <select type="text" id="node-input-from">
             <option value='prog' selected>Set msg.from</option>
             <option value='auto' selected>Auto Detect</option>
@@ -114,7 +114,7 @@
     <br/>
 
         <div class="form-row">
-        <label for="node-input-to"><i class="fa fa-book"></i> Language</label>
+        <label for="node-input-to"><i class="fa fa-book"></i>To Language</label>
         <select type="text" id="node-input-to">
              <option value='prog' selected>Set msg.to</option>
             <option value='en' selected>English</option>
